Refactored build to use vite instead of webpack

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "tensorflowjs-example",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server -d --inline --config webpack.config.js"
+    "start": "vite",
+    "build": "vite build"
   },
   "repository": {
     "type": "git",
@@ -18,19 +18,7 @@
   },
   "homepage": "https://github.com/frc2423/tensorflowjs-example#readme",
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
-    "@babel/node": "^7.8.4",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
-    "babel-loader": "^8.0.4",
-    "css-loader": "^0.28.11",
-    "sass-loader": "^7.0.3",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.2"
+    "vite": "^2.2.1"
   },
   "dependencies": {
     "@tensorflow-models/coco-ssd": "^2.2.1",
